# GPUBench

./: .gitignore  1  CMakeLists.txt  Cargo.toml  INSTALL.md  LICENSE  OPENCL_BACKEND.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX_SUMMARY.md  README.md  TODO.md  VERSION_REQUIREMENTS.md  WINDOWS_MINGW_COMPATIBILITY.md  WINDOWS_PACKAGING.md  build_windows.bat  comp.spv  configure.ps1  fix_args.py  fix_args2.py  fix_buffer_args.py  fix_cl_structs.py  fix_ocl_pc.py  fix_pc_args_cache.py  pad_structs.py  patch_kernels.py  patch_vk.py  test.co  test_bf16.comp  test_bw.co  test_fail.cpp
.github/workflows/: release.yml
build_v2/: gpubench
build_v2/kernels/opencl/: cachebw_l3.cl  fp16.cl  int4.cl  membw_256.cl
build_v2/kernels/rocm/: cache_bandwidth.co  cache_latency.co  cachebw_l1.co  cachebw_l2.co  cachebw_l3.co  fp16.co  fp32.co  fp4_emulated.co  fp64.co  fp8.co  fp8_emulated.co  int4.co  int8.co  l0_cache_bandwidth.co  l0_cache_latency.co  membw_1024.co  membw_128.co  membw_256.co
cpp_src/: main.cpp
cpp_src/benchmarks/: Bf16Bench.cpp  CacheBench.h  Fp16Bench.cpp  Fp16Bench.h  Fp32Bench.h  Fp4Bench.h  Fp64Bench.cpp  Fp64Bench.h  Fp6Bench.cpp  Fp8Bench.cpp  Fp8Bench.h  IBenchmark.h  Int4Bench.cpp  Int8Bench.h  MemBandwidthBench.h  RayASBuildBench.cpp  RayASBuildBench.h  RayAnyHitBench.h  RayDivergenceBench.cpp  RayIncoherentBench.h  RayMaterialDivergenceBench.h  RayProceduralBench.cpp  RayTracingBench.cpp  RayTracingBench.h  SysMemBandwidthBench.cpp  SysMemLatencyBench.cpp
cpp_src/core/: BenchmarkRunner.cpp  BenchmarkRunner.h  ComputeBackend.h  IComputeContext.h  OpenCLContext.h  ResultFormatter.cpp  ResultFormatter.h  RunnerAPI.cpp  RunnerAPI.h  VulkanContext.cpp
cpp_src/utils/: DynamicLibrary.h  KernelPath.h
docs/: Architecture_Recommendations.md  future_todos.md
gpubench-core/: Cargo.toml
gpubench-core/scratch/: main.rs
gpubench-core/src/: context.rs  lib.rs  main.rs  test_ash.rs  vulkan.rs
gpubench-core/src/benchmarks/: bf16.rs  fp16.rs  fp32.rs  fp64.rs  fp8.rs  int4.rs  int8.rs  membw.rs  mod.rs  rt_anyhit.rs  rt_asbuild.rs  rt_divergence.rs  (+7 more)
gpubench-gui/: Cargo.toml  build.rs  test_tooltip.rs
gpubench-gui/src/: main.rs
gpubench-sys/: Cargo.toml  build.rs
gpubench-sys/src/: bridge.cpp  bridge.h  lib.rs
hip_kernels/: cache_bandwidth.hip  cache_latency.hip  cachebw_l1.hip  cachebw_l2.hip  cachebw_l3.hip  fp16.hip  fp16_matrix.hip  fp32.hip  fp64.hip  fp8.hip  fp8_emulated.hip  fp8_matrix.hip  int4.hip  int8.hip  l0_cache_bandwidth.hip  membw_1024.hip  membw_128.hip  membw_256.hip
kernels/: fp16.cl  fp8.cl  int8.cl
kernels/opencl/: bf16.cl  cache_bw_robust.cl  cache_latency.cl  cachebw_l1.cl  cachebw_l2.cl  cachebw_l3.cl  fp16.cl  fp32.cl  fp8.cl  int8.cl  l0_cache_latency.cl  membw_256.cl
kernels/rocm/: bf16.co  bf16.hip  bf16_matrix.co  bf16_matrix.hip  cache_bandwidth.co  cache_bandwidth.hip  cache_bw_robust.co  cache_bw_robust.hip  cache_latency.co  cache_latency.hip  cachebw_l1.co  cachebw_l1.hip  cachebw_l2.co  cachebw_l2.hip  cachebw_l3.co  cachebw_l3.hip  fp16.co  fp16.hip  fp16_matrix.co  fp16_matrix.hip  fp32.co  fp32.hip  fp4_emulated.co  fp64.co  fp8.co  fp8.hip  fp8_emulated.co  fp8_matrix.co  fp8_matrix.hip  int4.co  int4.hip  int8.co  int8.hip  l0_cache_bandwidth.co  l0_cache_latency.co  l0_cache_latency.hip  membw_1024.co  membw_128.co  membw_256.co  membw_256.hip
kernels/vulkan/: bf16.comp  cache_bandwidth.comp  cache_latency.comp  cachebw_l1.spv  cachebw_l2.spv  cachebw_l3.comp  cachebw_l3.spv  coop_matrix_fp16.comp  coop_matrix_fp16.spv  coop_matrix_fp8.comp  coop_matrix_int4.comp  coop_matrix_int8.comp  coop_matrix_int8.spv  fp16.comp  fp32.comp  fp32.spv  fp32_w32.comp  fp32_w64.comp  fp4_emulated.spv  fp64.comp  fp64.spv  fp8.spv  int4.comp  int4.spv  int8.comp  l0_cache.comp  l0_cache_bandwidth.comp  l0_cache_bandwidth.spv  l0_cache_latency.spv  membw.comp  membw.spv  membw_1024.comp  membw_1024.spv  membw_128.comp  membw_128.spv  membw_256.comp  membw_256.spv  null.spv  ray_divergence.comp  rayanyhit_pipeline.rgen  (+17 more)
packaging/windows/: ICON_PLACEHOLDER.txt  README.md  build_package.ps1
shaders/: cache_bandwidth.comp  cache_bw_robust.comp  cache_latency.comp  cachebw_l1.comp  cachebw_l2.comp  cachebw_l3.comp  coop_matrix_bf16.comp  coop_matrix_fp16.comp  coop_matrix_int4.comp  coop_matrix_int8.comp  fp16.comp  fp32.comp  fp4_emulated.comp  fp4_native.comp  fp64.comp  fp8.comp  fp8_native.comp  int4.comp  int4_native.comp  int8.comp  l0_cache.comp  l0_cache_bandwidth.comp  l0_cache_latency.comp  membw_1024.comp  membw_128.comp  membw_256.comp  rayanyhit_pipeline.rahit  rayanyhit_pipeline.rchit  rayanyhit_pipeline.rmiss  raydiv_pipeline_a.rchit  raydiv_pipeline_e.rchit  rayincoherent.rgen  raymatdiv.rgen  raymatdiv_mat1.rchit  raymatdiv_mat3.rchit  raypayload_128b.rchit  raypayload_128b.rgen  raypayload_16b.rchit  rayprocedural.rchit  rayprocedural.rgen
src/: main.cpp
src/benchmarks/: Bf16Bench.h  CacheBandwidthBench.cpp  CacheBandwidthBench.h  CacheBench.cpp  CacheBench.h  CacheLatencyBench.cpp  CacheLatencyBench.h  Fp16Bench.cpp  Fp16Bench.h  Fp32Bench.cpp  Fp32Bench.h  Fp4Bench.cpp  Fp4Bench.h  Fp64Bench.cpp  Fp64Bench.h  Fp6Bench.cpp  Fp6Bench.h  Fp8Bench.cpp  Fp8Bench.h  IBenchmark.h  Int4Bench.cpp  Int4Bench.h  Int8Bench.cpp  Int8Bench.h  MemBandwidthBench.cpp  MemBandwidthBench.h  RayASBuildBench.cpp  RayAnyHitBench.cpp  RayDivergenceBench.cpp  RayDivergenceBench.h  RayIncoherentBench.cpp  RayMaterialDivergenceBench.cpp  RayMaterialDivergenceBench.h  RayPayloadBench.cpp  RayPayloadBench.h  RayProceduralBench.cpp  RayProceduralBench.h  RayTracingBench.cpp  RayTracingBench.h  SysMemBandwidthBench.cpp  (+2 more)
src/core/: BenchmarkRunner.cpp  BenchmarkRunner.h  ComputeBackendFactory.h  IComputeContext.h  OpenCLContext.cpp  OpenCLContext.h  ROCmContext.cpp  ROCmContext.h  ResultFormatter.cpp  ResultFormatter.h  VulkanContext.cpp  VulkanContext.h
src/utils/: Config.h.in  KernelPath.cpp  ShaderCache.cpp  ShaderCache.h
test_ash/: Cargo.toml
test_ash/src/: main.rs
test_zip/GPUBench-1.0.0-win64/: RunAllBenchmarks.bat
(+38 files in other folders)
