[package]
name = "gpubench-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
gpubench-core = { path = "../gpubench-core" }
gpubench-sys = { path = "../gpubench-sys" }
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
